--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" />
-        <activity android:name=".CreateProfile2Activity"></activity>
+        <activity android:name=".CreateProfile2Activity" />
+        <activity android:name=".activityLevelDescriptionsActivity"></activity>
     </application>
 
 </manifest>
